--- a/TimeCounter/TimeCounter.csproj
+++ b/TimeCounter/TimeCounter.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TimeCounter</RootNamespace>
     <AssemblyName>TimeCounter</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -56,11 +57,11 @@
     <Compile Include="Forms\FormChart.Designer.cs">
       <DependentUpon>FormChart.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormAddTime.cs">
+    <Compile Include="Forms\FormEditTime.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormAddTime.Designer.cs">
-      <DependentUpon>FormAddTime.cs</DependentUpon>
+    <Compile Include="Forms\FormEditTime.Designer.cs">
+      <DependentUpon>FormEditTime.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormRecord.cs">
       <SubType>Form</SubType>
@@ -87,8 +88,8 @@
     <EmbeddedResource Include="Forms\FormChart.resx">
       <DependentUpon>FormChart.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormAddTime.resx">
-      <DependentUpon>FormAddTime.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FormEditTime.resx">
+      <DependentUpon>FormEditTime.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
